--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.volley:volley:1.0.0' //Volley Library
+    compile 'com.ms-square:expandableTextView:0.1.4' //Expandable TextView
     testCompile 'junit:junit:4.12'
 }
