--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    //Volley Library
+    //Expandable TextView
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.volley:volley:1.0.0' //Volley Library
-    compile 'com.ms-square:expandableTextView:0.1.4' //Expandable TextView
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.ms-square:expandableTextView:0.1.4'
     testCompile 'junit:junit:4.12'
 }
