--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.ms-square:expandableTextView:0.1.4'
+    compile 'com.aurelhubert:ahbottomnavigation:2.0.6'
     testCompile 'junit:junit:4.12'
 }
