--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreen"
-            android:windowSoftInputMode="stateVisible|adjustPan"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +30,7 @@
         <activity
             android:name=".MainActivity_user"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Activity_Login"
