--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,13 +27,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.0.0'
+
+    compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.ms-square:expandableTextView:0.1.4'
     compile 'com.aurelhubert:ahbottomnavigation:2.0.6'
     testCompile 'junit:junit:4.12'
