--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,14 @@
         </receiver>
 
         <activity android:name=".Activitiy_main_truck"></activity>
+
+        <!-- GOOGLE MAPS -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyB1dvwx4xIz9NlV5jXFSipQAehuQE7d-Po" />
     </application>
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 </manifest>
